--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,10 +1,19 @@
 # Add the required packages
-streamlit==1.18.1
+# streamlit==1.18.1
+# tensorflow==2.12.0
+# numpy==1.24.0
+# pandas==1.3.5
+# matplotlib==3.5.1
+# seaborn==0.11.2
+# Pillow==9.0.0
+# opencv-python==4.5.5.62
+# wget==3.2
+streamlit
 tensorflow==2.12.0
-numpy==1.21.4
-pandas==1.3.5
-matplotlib==3.5.1
-seaborn==0.11.2
-Pillow==9.0.0
-opencv-python==4.5.5.62
-wget==3.2
+numpy
+pandas
+matplotlib
+seaborn
+Pillow
+opencv-python
+wget
